[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pieces/Fish.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pieces/Shark.gd" type="Script" id=2]
[ext_resource path="res://assets/SharkProper 1.png" type="Texture" id=3]
[ext_resource path="res://assets/DeadSharkBig.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.50387
height = 44.8206

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.26939
height = 12.449

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.24095
height = 45.7671

[node name="Shark" instance=ExtResource( 1 )]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 2 )
fish_size = 9
max_size = 9
max_speed = 90.0
acceleration = 90.0
fish_color = Color( 0, 0, 0, 1 )
player_name = "shark"
fish_alertness = 4.0
sprite = ExtResource( 3 )
health = 4

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -17.2047, -0.405773 )
shape = SubResource( 1 )

[node name="RightTail" type="Area2D" parent="." index="5"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightTail" index="0"]
position = Vector2( 30.9604, 0.730389 )
rotation = 1.309
shape = SubResource( 2 )

[node name="LeftTail" type="Area2D" parent="." index="6"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftTail" index="0"]
position = Vector2( -30.96, 0.73 )
rotation = -1.309
shape = SubResource( 2 )

[node name="LeftMainCollision" type="CollisionShape2D" parent="." index="7"]
position = Vector2( 17.205, -0.406 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="ReactionTimer" type="Timer" parent="." index="8"]
one_shot = true

[node name="DeathSprite" type="Sprite" parent="." index="9"]
visible = false
position = Vector2( 4.58716, 7.86371 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 4 )

[node name="RetreatTimer" type="Timer" parent="." index="11"]
wait_time = 4.5
one_shot = true
[connection signal="area_entered" from="RightTail" to="." method="_on_RightTail_area_entered"]
[connection signal="area_entered" from="LeftTail" to="." method="_on_LeftTail_area_entered"]
[connection signal="timeout" from="RetreatTimer" to="." method="_on_RetreatTimer_timeout"]
